Elements using @apply shouldn't use the MatchedPropertiesCache

This patch disables the MatchedPropertiesCache on elements which use
@apply rules. We re-use the same flag as for when variables are
referenced from non-inherited properties because this is fundamentally
the same issue.

For elements with MatchedProperties in the cache but a different parent
ComputedStyle than is cached, we copy non-inherited properties directly
from the cache and apply only inherited properties. This doesn't work
when a non-inherited property depends on a parent's property and we
already disable this optimisation when a non-inherited property is set
to inherit or a variable reference. Similarly, using @apply can make
a non-inherited property depend on a parent's property by having the
@apply'd variable be inherited and setting a non-inherited property
with the rule.

BUG=633745

Review-Url: https://codereview.chromium.org/2219543003
Cr-Commit-Position: refs/heads/master@{#410578}

Former-commit-id: da555331c0bea26738d4c1ffe0b5fae8a706370b